--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,31 @@
 baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+languageCode = 'ja-JP'
+title = 'manpuku panda'
+theme = 'soho'
+
+enableInlineShortcodes = true
+summarylength = 10
+enableEmoji = true
+
+
+[params]
+author = "manpukupanda"
+description = "ソフトウェア実験室"
+
+profilePicture = "images/profile.png"
+
+copyright = "manpukupanda"
+
+
+[markup]
+
+  [markup.highlight]
+  codeFences = true
+  guessSyntax = false
+  hl_Lines = ""
+  lineNoStart = 1
+  lineNos = false
+  lineNumbersInTable = true
+  noClasses = true # if false, you need to provide you own custom CSS
+  style = "monokai"
+  tabWidth = 4
