ドメイン設定

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://manpukupanda.tech/'
 languageCode = 'ja-JP'
 title = 'manpuku panda'
 theme = 'soho'
